--- a/app/src/main/res/menu/menu_principal.xml
+++ b/app/src/main/res/menu/menu_principal.xml
@@ -3,6 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/nuevoCreate"
+        android:id="@+id/menuNuevo"
         android:title="@string/hint_nuevo" />
 </menu>
